--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,6 @@ description = "A MCP server for deepauto intern assignment"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "docling>=2.42.0",
     "fastmcp>=2.10.6",
 ]
