--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "A MCP server for deepauto intern assignment"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "beautifulsoup4>=4.13.4",
     "docling>=2.42.0",
     "fastmcp>=2.10.6",
+    "lxml>=5.4.0",
     "pytest-playwright>=0.7.0",
 ]
