--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,4 +10,20 @@ dependencies = [
     "fastmcp>=2.10.6",
     "lxml>=5.4.0",
     "pytest-playwright>=0.7.0",
+    "torch",
+    "torchvision", 
+    "torchaudio",
 ]
+
+[tool.uv]
+index-strategy = "unsafe-best-match"
+
+[[tool.uv.index]]
+name = "pytorch-cu128"
+url = "https://download.pytorch.org/whl/cu128"
+explicit = true
+
+[tool.uv.sources]
+torch = { index = "pytorch-cu128" }
+torchvision = { index = "pytorch-cu128" }
+torchaudio = { index = "pytorch-cu128" }
