--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,10 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "beautifulsoup4>=4.13.4",
-    "docling>=2.42.0",
     "fastmcp>=2.10.6",
     "lxml>=5.4.0",
     "playwright>=1.54.0",
+    "requests>=2.32.4",
 ]
 
 [project.scripts]
