--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "beautifulsoup4>=4.13.4",
     "fastmcp>=2.10.6",
     "lxml>=5.4.0",
+    "markdownify>=1.1.0",
     "playwright>=1.54.0",
     "requests>=2.32.4",
 ]
