💚 Distribute only when files related to a docker images are changed

--- a/.github/workflows/push-to-dockerhub.yml
+++ b/.github/workflows/push-to-dockerhub.yml
@@ -3,6 +3,15 @@ name: Build Docker Image and Push to Dockerhub
 on:
   push:
     branches: [ main ]
+    paths:
+      - html/**
+      - pdf/**
+      - src/**
+      - dockerignore
+      - .python-version
+      - Dockerfile
+      - pyproject.toml
+      - uv.lock
 
 jobs:
   build-and-push:
