--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "beautifulsoup4>=4.13.4",
+    "docling>=2.42.2",
     "fastmcp>=2.10.6",
     "lxml>=5.4.0",
     "markdownify>=1.1.0",
